# Admin-Service-TA

./: hello.py  pyproject.toml  requirements.txt  sql_app.db
src/app/adapters/entrypoints/api/: base.py  utils.py
src/app/adapters/entrypoints/api/v1/: route_admin.py  route_student.py  route_teacher.py
src/app/adapters/repositories/: student.py  teacher.py
src/app/adapters/unit_of_works/: student.py
src/app/adapters/use_cases/: student.py  teacher.py
src/app/configurator/: config.py  containers.py
src/app/domain/models/: student.py  student_teacher.py  teacher.py
src/app/domain/ports/repositories/: student.py  teacher.py
src/app/domain/ports/unit_of_works/: student.py  teacher.py
src/app/domain/ports/use_cases/: student.py  teacher.py
src/app/domain/schemas/: assign_teacher_student.py  student.py  teacher.py
